--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,48 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>IteaLesson2</title>
+  <title>NgLes1</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 </head>
 <body>
-  <app-root></app-root>
+ <main>
+    <app-root></app-root>
+  </main>  
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
+<footer class="page-footer indigo darken-2">
+  <div class="container">
+    <div class="row ">
+      <div class="col l6 s12">
+        <h5 class="white-text">Задание</h5>      
+        <p class="grey-text text-lighten-4">1) Сделать TODO list с выводом списка задач и версткой (можно использовать materialize);
+          2) Список задач подгружать использовав fake api 
+          3) Элемент списка должен состоять из вывода title и checkbox в конце (если свойство completed объекта true то checkbox выбран и сам background элемента сделать серым что бы видно было что он выполнен)
+          4) Сверху списка добавить поле input для ввода и кнопку.</p>
+      </div>
+      <div class="col l4 offset-l2 s12">
+        <h5 class="white-text">Сссылка на АПИ</h5>
+        <ul>
+          <li><a class="grey-text text-lighten-3" href="https://jsonplaceholder.typicode.com/">fake api</a></li>
+          <li><a class="grey-text text-lighten-3" href="https://metanit.com/web/angular2/3.1.php">ngClass и ngStyle</a></li>
+          <li><a class="grey-text text-lighten-3" href="https://itvdn.com/ru/blog/article/10lh-angular">10 ПОЛЕЗНЫХ ФИЧ В ANGULAR, О КОТОРЫХ ВЫ МОГЛИ НЕ ЗНАТЬ</a></li>
+                
+        </ul>
+        <h6 class="white-text">За помощь спасибо Andrey Kovalenko</h6>
+      </div>
+    </div>
+  </div>
+
+  <div class="footer-copyright indigo darken-4">
+    <div class="container">
+    © 2014 Copyright Text
+    <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+    </div>
+  </div>
+</footer>
 </html>
